# search-playground

./: .gitignore  README.md  connect4_5x5_cli.py  connect4_az_interactive.py  connect4_az_train.py  connect4_cli.py  connectk_azlite.py  mcts_map_coloring.py  pyproject.toml
connect4/: __init__.py  cli.py  engine.py
connect4/agents/: __init__.py  alphabeta.py  alphazero.py  base.py  human.py  random_agent.py
connect4/az/: __init__.py  bridge.py  game.py  interactive.py  mcts.py  model.py  train.py
