[project]
name = "search-playground"
version = "0.1.0"
description = "Educational search playgrounds: MCTS/UCT and neural-guided MCTS (AlphaZero-lite)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.0",
  "rich>=13.7",
  "torch>=2.2",
  "tqdm>=4.66",
  "typer>=0.12",
]

[tool.uv]
package = false

